syntax = "proto3";

package woodpecker.protobuf;

option java_multiple_files = true;
option java_package = "org.woodpecker.protobuf";
option java_outer_classname = "WoodpeckerProto";

service AgentService {
  rpc GetAgentConfig(GetAgentConfigRequest) returns (GetAgentConfigResponse);
  rpc CreateKeys(CreateKeysRequest) returns (CreateKeysResponse);
  rpc DeleteKeys(DeleteKeysRequest) returns (DeleteKeysResponse);
}

message GetAgentConfigRequest {
}

message GetAgentConfigResponse {
}

message CreateKeysRequest {
}

message CreateKeysResponse {
  repeated string keys = 1;
}

message DeleteKeysRequest {
  repeated string keys = 1;
}

message DeleteKeysResponse {
}